mui grid2 fixed grid layout issue

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 .title {
   text-align: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
   color: #dad806;
   font-family: "Titan One", cursive;
   text-shadow: 0px 0px 10px black;
